--- a/css/style.css
+++ b/css/style.css
@@ -223,7 +223,7 @@ input[type="range"]::-moz-range-thumb {
 
 .author-info {
 	font-size: 12px;
-	color: #00ffff;
+	color: #ffffff;
 	text-align: center;
 	margin-top: 4px;
 }
