--- a/css/style.css
+++ b/css/style.css
@@ -153,7 +153,6 @@ body {
 	background: rgba(0, 0, 0, 0.5);
 	padding: 8px 12px;
 	border: 1px solid #00ffff;
-	margin-bottom: 8px;
 	cursor: pointer;
 	text-align: center;
 	transition: all 0.2s;
@@ -222,6 +221,8 @@ input[type="range"]::-moz-range-thumb {
 }
 
 .author-info {
+	margin-top: 8px; padding-top: 8px;
+	border-top: 1px solid #00ffff;
 	font-size: 12px;
 	color: #ffffff;
 	text-align: center;
