--- a/css/style.css
+++ b/css/style.css
@@ -334,7 +334,7 @@ input[type="range"]::-moz-range-thumb {
 	right: 0;
 	bottom: 18px;
 	top: 0;
-	pointer-events: none;
+	pointer-events: auto;
 }
 .stick {
 	width: 120px;
